Minor code cleanup (#14816)
* nitpick: modern java

Signed-off-by: subhramit <subhramit.bb@live.in>

* more modern java

Signed-off-by: subhramit <subhramit.bb@live.in>

* adjust comment indent

Signed-off-by: subhramit <subhramit.bb@live.in>

* clean up vars

Signed-off-by: subhramit <subhramit.bb@live.in>

* run formatter

Signed-off-by: subhramit <subhramit.bb@live.in>

---------

Signed-off-by: subhramit <subhramit.bb@live.in>